kubernetes/apps/thelounge/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thelounge
  namespace: thelounge
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`irc.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: thelounge
          port: 9000
  tls: {}
